# scout-tool-backend

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
anmelde_tool/: urls.py
anmelde_tool/attributes/: admin.py  apps.py  choices.py  models.py  polymorphic_serializer.py  serializers.py  urls.py  views.py
anmelde_tool/email_services/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
anmelde_tool/event/: admin.py  api_exceptions.py  apps.py  helper.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
anmelde_tool/registration/: admin.py  api_exceptions.py  apps.py  models.py  signals.py  (+3 more)
authentication/: KeycloakOpenIDExtended.py  admin.py  api_exceptions.py  apps.py  choices.py  models.py  serializers.py  signals.py  sync_keycloak_users.py  tests.py  urls.py  views.py
backend/: .env.example  Dockerfile  OIDCAuthentication.py  celery.py  settings.py  start.sh  timestamp_mixin.py  urls.py
basic/: admin.py  api_exceptions.py  choices.py  helper.py  models.py  serializers.py  urls.py  views.py
food/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
inspi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
keycloak_auth/: KeycloakAdminExtended.py  admin.py  api_exceptions.py  apps.py  choices.py  dataclasses.py  enums.py  helper.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
messaging/: admin.py  apps.py  choices.py  models.py  serializers.py  signals.py  urls.py  views.py
(+284 files in other folders)
